<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/news_setting_title">

    <ListPreference
        android:defaultValue="@string/setting_order_by_default"
        android:entries="@array/setting_order_by_labels"
        android:entryValues="@array/setting_order_by_values"
        android:key="@string/setting_order_by_key"
        android:title="@string/setting_order_by_label">
    </ListPreference>

    <ListPreference
        android:defaultValue="@string/setting_news_area_default"
        android:entries="@array/setting_news_area_by_labels"
        android:entryValues="@array/setting_news_area_by_values"
        android:key="@string/setting_news_area_key"
        android:title="@string/setting_news_area_label">
    </ListPreference>

    <EditTextPreference
        android:defaultValue="@string/setting_no_of_news_per_page_default"
        android:inputType="numberDecimal"
        android:key="@string/setting_no_of_news_per_page_key"
        android:title="@string/setting_no_of_news_per_page_label"
        android:hint="@string/editPrefHint">
    </EditTextPreference>

</PreferenceScreen>