<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_5dp"
    android:layout_margin="@dimen/_5dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_3dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/thumbnailImageView"
                android:layout_width="@dimen/_0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent"
                tools:src="@mipmap/ic_launcher_round"
                android:contentDescription="@string/news_thumbnail_image"
                android:scaleType="fitCenter"/>

            <LinearLayout
                android:layout_width="@dimen/_0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dateTextView"
                    style="@style/NewsInfo"
                    tools:text="@string/date_text"/>

                <TextView
                    android:id="@+id/authorTextView"
                    style="@style/NewsInfo"
                    tools:text="@string/author_name_text"/>

                <TextView
                    android:id="@+id/newsTypeTextView"
                    style="@style/NewsInfo"
                    tools:text="@string/news_type_text"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/headingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/news_heading_text"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            android:padding="@dimen/_5dp"
            android:maxLines="3"
            android:ellipsize="end"/>

    </LinearLayout>

</android.support.v7.widget.CardView>